; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_FileIO.c_UniSafeFileName.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_FileIO.c_UniSafeFileName.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@UniSafeFileName.danger_str = internal global i8* bitcast ([10 x i32]* @.str to i8*), align 8
@.str = private unnamed_addr constant [10 x i32] [i32 92, i32 47, i32 58, i32 42, i32 63, i32 34, i32 60, i32 62, i32 124, i32 0], align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @UniSafeFileName(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8, align 1
  %7 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  %8 = load i8*, i8** %2, align 8
  %9 = icmp eq i8* %8, null
  br i1 %9, label %10, label %11

10:                                               ; preds = %1
  br label %51

11:                                               ; preds = %1
  %12 = load i8*, i8** @UniSafeFileName.danger_str, align 8
  %13 = call i64 @UniStrLen(i8* %12)
  store i64 %13, i64* %5, align 8
  %14 = load i8*, i8** %2, align 8
  %15 = call i64 @UniStrLen(i8* %14)
  store i64 %15, i64* %4, align 8
  store i64 0, i64* %3, align 8
  br label %16

16:                                               ; preds = %48, %11
  %17 = load i64, i64* %3, align 8
  %18 = load i64, i64* %4, align 8
  %19 = icmp ult i64 %17, %18
  br i1 %19, label %20, label %51

20:                                               ; preds = %16
  %21 = load i8*, i8** %2, align 8
  %22 = load i64, i64* %3, align 8
  %23 = getelementptr inbounds i8, i8* %21, i64 %22
  %24 = load i8, i8* %23, align 1
  store i8 %24, i8* %6, align 1
  store i64 0, i64* %7, align 8
  br label %25

25:                                               ; preds = %40, %20
  %26 = load i64, i64* %7, align 8
  %27 = load i64, i64* %5, align 8
  %28 = icmp ult i64 %26, %27
  br i1 %28, label %29, label %43

29:                                               ; preds = %25
  %30 = load i8, i8* %6, align 1
  %31 = sext i8 %30 to i32
  %32 = load i8*, i8** @UniSafeFileName.danger_str, align 8
  %33 = load i64, i64* %7, align 8
  %34 = getelementptr inbounds i8, i8* %32, i64 %33
  %35 = load i8, i8* %34, align 1
  %36 = sext i8 %35 to i32
  %37 = icmp eq i32 %31, %36
  br i1 %37, label %38, label %39

38:                                               ; preds = %29
  store i8 95, i8* %6, align 1
  br label %39

39:                                               ; preds = %38, %29
  br label %40

40:                                               ; preds = %39
  %41 = load i64, i64* %7, align 8
  %42 = add i64 %41, 1
  store i64 %42, i64* %7, align 8
  br label %25

43:                                               ; preds = %25
  %44 = load i8, i8* %6, align 1
  %45 = load i8*, i8** %2, align 8
  %46 = load i64, i64* %3, align 8
  %47 = getelementptr inbounds i8, i8* %45, i64 %46
  store i8 %44, i8* %47, align 1
  br label %48

48:                                               ; preds = %43
  %49 = load i64, i64* %3, align 8
  %50 = add i64 %49, 1
  store i64 %50, i64* %3, align 8
  br label %16

51:                                               ; preds = %10, %16
  ret void
}

declare dso_local i64 @UniStrLen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
